@@ -1,3 +1,8 @@
+Thu Feb 25 09:08:55 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp:
+          Implemented some get/set_qos methods.
+
 Thu Feb 25 08:32:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/tests/TimeConversion/Time_Conversion.mpc:
